--- a/fullstack/my_users_app/views/index.erb
+++ b/fullstack/my_users_app/views/index.erb
@@ -6,13 +6,6 @@
     <body>
         <h1>Users</h1>
         <table>
-            
-        </table>
-    </body>
-</html>
-
-
-
             <tr>
                 <th>FirstName</th>
                 <th>LastName</th>
@@ -24,6 +17,12 @@
                 <td><%=row["firstname"]%></td>
                 <td><%=row["lastname"]%></td>
                 <td><%=row["age"]%></td>
-                <td><%=row["email"]%></td>
+                <td><%=row["firstname"]%></td>
             </tr>
             <% end %>
+        </table>
+    </body>
+</html>
+            
+
+
