--- a/fullstack/tetris/tetris.css
+++ b/fullstack/tetris/tetris.css
@@ -20,7 +20,6 @@ h3 {
 .buffer {
     height: 200px;
     width: 100%;
-    text-align: center;
     margin:auto;
     padding: 70px 0;
     
@@ -30,7 +29,7 @@ h3 {
     font-family: 'Press Start 2P', cursive;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     position:relative;
-    left: 20px;
+    left: 9.5em;
     font-size: 5em;
     font-weight: bold;
     text-decoration: none;
@@ -59,6 +58,7 @@ h3 {
 
 .tetromino {
     background-color: blue;
+    border: 1px inset rgba(151, 146, 140, 0.767);
 
     
 }
