--- a/fullstack/tetris/tetris.css
+++ b/fullstack/tetris/tetris.css
@@ -58,7 +58,8 @@ h3 {
 
 .tetromino {
     background-color: blue;
-    border: 1px inset rgba(151, 146, 140, 0.767);
+    border: 1px inset
+    rgba(151, 146, 140, 0.767);
 
     
 }
