--- a/fullstack/tetris/tetris.css
+++ b/fullstack/tetris/tetris.css
@@ -4,7 +4,7 @@ body {
 
 h3 {
     position: relative;
-    left: 20px;
+    left: 1px;
 }
 
 .scorebutton {
@@ -13,8 +13,22 @@ h3 {
 }
 .container {
     display: flex;
-    justify-content: center;
+    position: absolute;
+    left: 300px;
     
+}
+
+.hold {
+    width: 80px;
+    height: 80px;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rgba(82, 82, 63, 0.445);
+}
+
+.hold div {
+    height: 20px;
+    width: 20px;
 }
 
 .buffer {
@@ -29,7 +43,8 @@ h3 {
     font-family: 'Press Start 2P', cursive;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     position:relative;
-    left: 9.5em;
+    left: 6em;
+    bottom: 1em;
     font-size: 5em;
     font-weight: bold;
     text-decoration: none;
@@ -57,11 +72,18 @@ h3 {
 }
 
 .tetromino {
-    background-color: blue;
-    border: 1px inset
-    rgba(151, 146, 140, 0.767);
+    background-color: blue; 
+}
 
-    
+.controls {
+    width: 160px;
+    height: 160px;
+    position: absolute;
+    bottom: 2px;
+    background-color: rgba(114, 114, 79, 0.445);
+    white-space: pre-line;
+    font-size: 0.6em;
+    font-weight: bold;
 }
 
 .mini-grid {
@@ -70,6 +92,7 @@ h3 {
     display: flex;
     flex-wrap: wrap;
     background-color: rgba(114, 114, 79, 0.445);
+    text-align: start;
 }
 
 .mini-grid div {
